# DropDice

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Tutorial.sln
Debug/: Tutorial.ilk
GLFWmismatch/: GLFWmismatch.vcxproj
Tutorial/: Die.h  Floor.h  FragmentShader.frag  Instance.cpp  Instance.h  Main.cpp  RayTracer.cpp  RayTracer.h  RectangularPrism.cpp  RectangularPrism.h  Rod.h  RubiksCore.cpp  RubiksCore.h  Scene.cpp  Scene.h  ShaderManager.cpp  ShaderManager.h  ShaderUtil.h  SpawnMachine.cpp  SpawnMachine.h  Tutorial.vcxproj  Tutorial.vcxproj.filters  VertexShader.vert  camera.cpp  camera.h  imgui.ini
Tutorial/Debug/: Tutorial.vcxprojResolveAssemblyReference.cache  vc120.idb  vc140.idb
Tutorial/Debug/Tutorial.tlog/: CL.read.1.tlog  CL.write.1.tlog  Tutorial.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Tutorial/Release/Tutorial.tlog/: CL.read.1.tlog  CL.write.1.tlog  Tutorial.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Tutorial/include/GL3W/: gl3w.c  gl3w.h
Tutorial/include/bullet/Bullet3Collision/: Bullet3Collision.vcxproj  Bullet3Collision.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
Tutorial/include/bullet/Bullet3Common/: Bullet3Common.vcxproj  Bullet3Common.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
Tutorial/include/bullet/Bullet3Dynamics/: Bullet3Dynamics.vcxproj  Bullet3Dynamics.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
Tutorial/include/bullet/Bullet3Geometry/: Bullet3Geometry.vcxproj  Bullet3Geometry.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
Tutorial/include/bullet/Bullet3OpenCL/: Bullet3OpenCL_clew.vcxproj  Bullet3OpenCL_clew.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
Tutorial/include/bullet/BulletCollision/: BulletCollision.vcxproj  INSTALL.vcxproj  (+3 more)
Tutorial/lib/: SOIL.lib  glfw3x86.lib  qu3e.lib
Tutorial/lib/bullet/: Bullet2FileLoader.lib  Bullet2FileLoader_vs2010.lib  Bullet2FileLoader_vs2010_debug.lib  Bullet3Collision.lib  Bullet3Collision_vs2010.lib  Bullet3Collision_vs2010_debug.lib  Bullet3Common.lib  Bullet3Common_vs2010.lib  Bullet3Common_vs2010_debug.lib  Bullet3Dynamics.lib  Bullet3Dynamics_vs2010.lib  Bullet3Dynamics_vs2010_debug.lib  Bullet3Geometry.lib  Bullet3Geometry_vs2010.lib  Bullet3Geometry_vs2010_debug.lib  Bullet3OpenCL_clew.lib  Bullet3OpenCL_clew_vs2010.lib  BulletCollision.lib  BulletCollision_vs2010.lib  BulletDynamics.lib  BulletDynamics_vs2010.lib  BulletFileLoader.lib  BulletFileLoader_vs2010.lib  BulletFileLoader_vs2010_debug.lib  BulletSoftBody.lib  BulletSoftBody_vs2010.lib  BulletSoftBody_vs2010_debug.lib  BulletWorldImporter.lib  BulletWorldImporter_vs2010.lib  BulletWorldImporter_vs2010_debug.lib  BulletXmlWorldImporter.lib  ConvexDecomposition.lib  ConvexDecomposition_vs2010.lib  ConvexDecomposition_vs2010_debug.lib  GIMPACTUtils.lib  HACD.lib  HACD_vs2010.lib  LinearMath.lib  LinearMath_vs2010.lib  LinearMath_vs2010_debug.lib  (+6 more)
include/: README.md
src/: Die.h  Floor.h  Instance.cpp  Instance.h  Main.cpp  RayTracer.cpp  RectangularPrism.cpp  RectangularPrism.h  RubiksCore.h  ShaderManager.cpp  ShaderManager.h  ShaderUtil.h  SpawnMachine.cpp  SpawnMachine.h  camera.h  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h
src/shaders/: FragmentShader.frag
(+282 files in other folders)
